--- a/.github/workflows/aplikacja.yml
+++ b/.github/workflows/aplikacja.yml
@@ -25,14 +25,11 @@ jobs:
       shell: pwsh
       run: ./Instalator.ps1 
       
-
-    - name: Budowanie aplikacji exe
-      run: |
-        pyinstaller Task.py
-        EXE_PATH=$(pwd)/dist/Task/Task.exe
-
-    - name: przenoszenie aplikacji exe na repozytorium
+    - name: Odpalenie skryptu
+      run: python Task.py
+      
+    - name: Przesyłanie utworzonego pliku
       uses: actions/upload-artifact@v3
       with:
-        name: Task.exe
-        path: ${{ env.EXE_PATH }}
+        name: Converter.exe
+        path: ${{ github.workspace }}/Task.exe
